  * Document in the wallet-server package description that a DBD::* module
    and corresponding DateTime::Format::* module are required.  (There
    isn't a way to fully represent the required dependency.)
  * Rebuild Autoconf and Automake files during the build.
  * Define AUTOMATED_TESTING to enable some additional Perl tests.
  * Update standards version to 3.9.5 (no changes required).

 -- Russ Allbery <rra@debian.org>  Wed, 16 Jul 2014 13:51:23 -0700

wallet (1.0-5) unstable; urgency=low

  * Cherry-pick upstream commit to randomize the password used for initial
    Kerberos principal creation when talking to a Heimdal KDC.

 -- Russ Allbery <rra@debian.org>  Thu, 09 Jan 2014 14:05:19 -0800

wallet (1.0-4) unstable; urgency=low

  * Cherry-pick upstream commit to fix wallet-rekey when used with keytabs
    that contain multiple principals.
  * Cherry-pick upstream commit to fix the skipped test count for the
    ldap-attr verifier test.
  * Add libauthen-sasl-perl and libnet-ldap-perl to Build-Depends for the
    test suite.

 -- Russ Allbery <rra@debian.org>  Mon, 06 Jan 2014 21:27:50 -0800

wallet (1.0-3) unstable; urgency=low

  * Cherry-pick upstream commits to fix ACL history entries with
    PostgreSQL, an incorrect foreign key constraint for the object
    history, and bugs in handling of enctype restrictions for keytabs.
  * Move the DateTime::Format::* Perl modules for various databases to
    Depends from Recommends and add the Pg and MySQL versions as
    alternatives.

 -- Russ Allbery <rra@debian.org>  Tue, 05 Nov 2013 13:17:51 -0800

wallet (1.0-2) unstable; urgency=low

  * Cherry-pick upstream commits to fix the t/admin.t test with the
    squeeze version of DBIx::Class.

 -- Russ Allbery <rra@debian.org>  Fri, 29 Mar 2013 13:58:42 -0700

wallet (1.0-1) unstable; urgency=low

  * New upstream release.
    - New wallet-admin upgrade command to upgrade the schema to the latest